--- a/app/scss/components/_playlist.scss
+++ b/app/scss/components/_playlist.scss
@@ -89,11 +89,11 @@
 
 		&--col-1 {
 			flex: 1 1 40%;
-			padding-right: 0.5rem;
 		}
 
 		&--col-2 {
 			flex: 1 1 60%;
+			margin-left: 0.75rem;
 		}
 
 		&:hover {
